--- a/academics/index.html
+++ b/academics/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
-  <title>Our School &vert; Mooltripakdee International School</title>
+  <title>Academics &vert; Mooltripakdee International School</title>
 
   <!-- cookiebot consent banner -->
   <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="889c84d8-1246-4048-b06c-b4cb9c1dfef1" type="text/javascript"
@@ -35,7 +35,54 @@
 </head>
 
 <body>
-  <nav class="subpage-tint d-none d-lg-block">
+  <div class="alert alert--fixed-bottom alert-warning alert-dismissible fade show" role="alert">
+    <strong>Note:</strong> We are currently undergoing construction on our website. We'll update the contents as soon
+    as we can.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <!-- mobile view -->
+  <nav class="navbar navbar-fixed-top d-block d-xl-none d-flex justify-content-between navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img class="navbar__logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503015/mis-favicon/apple-touch-icon.png"
+        alt="MIS logo">
+      Mooltripakdee International School
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav text-center mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/our-school">Our School</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/academics">Academics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/events">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admissions">Admissions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/our-team">Our Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact-us">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- end - mobile view -->
+  <nav class="subpage-tint d-none d-xl-block">
     <div class="container">
 
       <!-- desktop view -->
@@ -58,15 +105,12 @@
         <!-- <a class="btn" data-toggle="modal" data-target="#enquiryForm" href="#">Enquiry</a> -->
       </div>
       <!-- end - desktop view -->
-
-      <!-- mobile view -->
-      <!-- end - mobile view -->
     </div>
   </nav>
 
   <header class="sub-header-image">
     <figure>
-        <img src="../img/academics.jpg" alt="">
+      <img src="https://source.unsplash.com/t6oZEgL0z18" alt="Subject Building">
       <figcaption class="container">
         <span class="sub-header-location">Library - Secondary Building</span>
       </figcaption>
@@ -78,17 +122,32 @@
     <article class="container">
       <h1>Academics</h1>
       <h4>Curricula</h4>
-      <p>The MIS curricula are designed to encourage each child to achieve their highest potential as well as to meet the English Curriculum standards.  The focus is on the physical, psychological, intellectual and social development of the child.</p>
+      <p>The MIS curricula are designed to encourage each child to achieve their highest potential as well as to meet
+        the English Curriculum standards. The focus is on the physical, psychological, intellectual and social
+        development of the child.</p>
       <h4>Preschool & Kindergarten</h4>
-      <p>MIS offers Preschool & Kindergarten education for children aged between 2 and 5 years old. We use the Montessori educational method in parallel with the Early Years Foundation Stage of the English curriculum. Both approaches promote the key areas of care, learning and development.
-      In the UK, Preschool is known as the Early Year Foundation Stage (EYFS), which covers education for children before they reach five. Meanwhile 'Kindergarten' here in Thailand, is equivalent to the ‘Reception Year’ in the UK, which admits children who turn 5 during the academic year.</p>
+      <p>MIS offers Preschool & Kindergarten education for children aged between 2 and 5 years old. We use the
+        Montessori educational method in parallel with the Early Years Foundation Stage of the English curriculum. Both
+        approaches promote the key areas of care, learning and development.
+        In the UK, Preschool is known as the Early Year Foundation Stage (EYFS), which covers education for children
+        before they reach five. Meanwhile 'Kindergarten' here in Thailand, is equivalent to the ‘Reception Year’ in the
+        UK, which admits children who turn 5 during the academic year.</p>
       <h4>Primary School</h4>
-      <p>Our primary school caters for children aged between 5 and 11 years old. It offers a broad and balanced curriculum based on the English National Curriculum. We offer high academic standards and a wide range of enrichment curriculum activities. All our pupils are treated as individuals, and their unique talents are nurtured and developed.
-      ​</p>
+      <p>Our primary school caters for children aged between 5 and 11 years old. It offers a broad and balanced
+        curriculum based on the English National Curriculum. We offer high academic standards and a wide range of
+        enrichment curriculum activities. All our pupils are treated as individuals, and their unique talents are
+        nurtured and developed.
+        ​</p>
       <h4>Secondary School</h4>
-      <p>Secondary School is geared towards 11 to 16 year old. We start with the English National Curriculum as the foundation and we supplement it with important ideas from other national and international sources in order to create well-grounded critical thinkers. There are a number of activities and tasks which encourages high achievement and academic success. All the pupils are encouraged to embrace a broader view of their world as they mature into their teen years.</p>
-      <p>Key Stage 3 ( Ages 11- 14 ) starts with the English National Curriculum as the foundation and is supplemented with other National and International sources to create well-grounded critical thinkers.  There is a number of activities and tasks which encourage high achievement and academic success.
-      All the pupils are encouraged to embrace a broader view of their world as they mature into their teen years.</p>
+      <p>Secondary School is geared towards 11 to 16 year old. We start with the English National Curriculum as the
+        foundation and we supplement it with important ideas from other national and international sources in order to
+        create well-grounded critical thinkers. There are a number of activities and tasks which encourages high
+        achievement and academic success. All the pupils are encouraged to embrace a broader view of their world as
+        they mature into their teen years.</p>
+      <p>Key Stage 3 ( Ages 11- 14 ) starts with the English National Curriculum as the foundation and is supplemented
+        with other National and International sources to create well-grounded critical thinkers. There is a number of
+        activities and tasks which encourage high achievement and academic success.
+        All the pupils are encouraged to embrace a broader view of their world as they mature into their teen years.</p>
     </article>
 
 
@@ -158,8 +217,10 @@
                       </div>
                       <div class="form-group">
                         <label for="exampleInputEmail1" hidden></label>
-                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" 
-                          placeholder="Enter email">
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                        <div class="email-invalid" style="display:none" role="alert">
+                          Must be a valid email address
+                        </div>
                         <small id="emailHelp" class="form-text text-muted">We'll never share
                           your email with anyone
                           else.</small>
@@ -168,12 +229,11 @@
                       <div class="form-group">
                         <label for="exampleFormControlTextarea1" class="form-text text-muted" hidden></label>
                         <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="3"
-                          placeholder="Is there anything else you'd like to tell us?"></textarea>
+                          placeholder="Enter your message here"></textarea>
                       </div>
                       <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <small>
-                          <label class="form-check-label text-muted" for="exampleCheck1"></label>
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
+                        <label class="form-check-label text-muted" for="exampleCheck1">
                           By ticking this box, you are accepting our
                           <a href="https://www.iubenda.com/privacy-policy/63134805/legal" target="_blank" rel="noopener noreferrer"
                             title="Privacy Policy">&nbsp;Privacy
@@ -181,7 +241,7 @@
                           to
                           use this information which
                           may be regarded as direct marketing in relation to our school.
-                        </small>
+                        </label>
                       </div>
                       <button type="submit" class="btn btn-outline-secondary">Submit Enquiry</button>
                     </div>
@@ -200,7 +260,7 @@
             </div>
           </div>
           <!-- End of Modal -->
-          
+
         </div>
         <div class="d-flex flex-column align-items-center col-md-4">
           <a href="/our-school">About Us</a>
@@ -251,6 +311,7 @@
     $('#header-carousel').carousel({
       interval: 5000
     });
+    $('.alert').alert();
   </script>
 </body>
 
