--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
 </head>
 
 <body>
+  <div class="alert alert--fixed-bottom alert-warning alert-dismissible fade show" role="alert">
+    <strong>Note:</strong> We are currently undergoing construction on our website. We'll update the contents as soon as we can.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
   <!-- mobile view -->
   <nav class="navbar navbar-fixed-top d-block d-xl-none d-flex justify-content-between navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img class="navbar__logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503015/mis-favicon/apple-touch-icon.png" alt="MIS logo">
+    <a class="navbar-brand" href="/">
+      <img class="navbar__logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503015/mis-favicon/apple-touch-icon.png"
+        alt="MIS logo">
       Mooltripakdee International School
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -69,7 +77,7 @@
     </div>
   </nav>
   <!-- end - mobile view -->
-  <nav class="tint d-none d-lg-block">
+  <nav class="tint d-none d-xl-block">
     <div class="container">
 
       <!-- desktop view -->
@@ -274,18 +282,18 @@
       </div>
     </section>
 
-    <div id="showcase" class="carousel slide carousel-fade" data-ride="carousel">
+    <div id="showcase" class="carousel slide carousel-fade d-none d-sm-block" data-ride="carousel">
       <div class="carousel-inner">
 
         <div class="carousel-item active">
           <!-- <img class="d-block w-100 showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496792/mis/mis-homepage/girl-reading.jpg"
             alt="First slide"> -->
-          <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496815/mis/mis-homepage/website_01.jpg"
+          <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1547630774/mis/mis-homepage/library_1.jpg"
             alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
               <span class="showcase-main">Enjoy solitude reading</span>
-              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <!-- <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span> -->
               <span class="showcase-location">School Library</span>
             </div>
           </div>
@@ -294,10 +302,10 @@
         <div class="carousel-item">
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496834/mis/mis-homepage/website_03.jpg"
             alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
-              <span class="showcase-main">Lorem ipsum dolor sit amet.</span>
-              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <span class="showcase-main">Reading @Library</span>
+              <!-- <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span> -->
               <span class="showcase-location">School Library &middot; Front Hall</span>
             </div>
           </div>
@@ -318,10 +326,10 @@
         <div class="carousel-item">
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496833/mis/mis-homepage/pool.jpg"
             alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
               <span class="showcase-main">Enjoy with your Friends</span>
-              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <!-- <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span> -->
               <span class="showcase-location">Indoor Pool</span>
             </div>
           </div>
@@ -330,11 +338,23 @@
         <div class="carousel-item">
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496801/mis/mis-homepage/building.jpg"
             alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
               <span class="showcase-main">Meet up on the Quad</span>
-              <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span>
+              <!-- <span class="showcase-sub">Lorem ipsum dolor sit amet consectetur.</span> -->
               <span class="showcase-location">The Quad</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1547630776/mis/mis-homepage/chemlab_2.jpg"
+            alt="Second slide">
+          <div class="carousel-caption">
+            <div class="text-box">
+              <span class="showcase-main">Spark your curiosity/creativity</span>
+              <!-- <span class="showcase-sub">in a wonderful outdoor setting to study and socialize</span> -->
+              <span class="showcase-location">Chemistry Lab</span>
             </div>
           </div>
         </div>
@@ -342,10 +362,10 @@
         <div class="carousel-item">
           <img class="d-block showcase-description" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537496826/mis/mis-homepage/reading.jpg"
             alt="Second slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption">
             <div class="text-box">
               <span class="showcase-main">Relaxing by the Park</span>
-              <span class="showcase-sub">in a wonderful outdoor setting to study and socialize</span>
+              <!-- <span class="showcase-sub">in a wonderful outdoor setting to study and socialize</span> -->
               <span class="showcase-location">Calming Environment</span>
             </div>
           </div>
@@ -442,7 +462,7 @@
                         <label for="exampleInputEmail1" hidden></label>
                         <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                           placeholder="Enter email" required>
-                        <div class="alert alert-danger email-invalid" style="display:none" role="alert">
+                        <div class="email-invalid" style="display:none" role="alert">
                           Must be a valid email address
                         </div>
                         <small id="emailHelp" class="form-text text-muted">We'll never share
@@ -453,7 +473,7 @@
                       <div class="form-group">
                         <label for="exampleFormControlTextarea1" class="form-text text-muted" hidden></label>
                         <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="3"
-                          placeholder="Is there anything else you'd like to tell us?" required></textarea>
+                          placeholder="Enter your message here" required></textarea>
                       </div>
                       <div class="form-group form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
@@ -533,6 +553,7 @@
     $('#showcase').carousel({
       interval: 5000
     });
+    $('.alert').alert();
   </script>
 </body>
 
