--- a/our-team/index.html
+++ b/our-team/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
 
-  <title>Our School &vert; Mooltripakdee International School</title>
+  <title>Our Team &vert; Mooltripakdee International School</title>
 
   <!-- cookiebot consent banner -->
   <!-- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="889c84d8-1246-4048-b06c-b4cb9c1dfef1" type="text/javascript"
@@ -35,7 +35,54 @@
 </head>
 
 <body>
-  <nav class="subpage-tint d-none d-lg-block">
+  <div class="alert alert--fixed-bottom alert-warning alert-dismissible fade show" role="alert">
+    <strong>Note:</strong> We are currently undergoing construction on our website. We'll update the contents as soon
+    as we can.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <!-- mobile view -->
+  <nav class="navbar navbar-fixed-top d-block d-xl-none d-flex justify-content-between navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img class="navbar__logo" src="https://res.cloudinary.com/imgursoyjean/image/upload/v1537503015/mis-favicon/apple-touch-icon.png"
+        alt="MIS logo">
+      Mooltripakdee International School
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav text-center mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/our-school">Our School</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/academics">Academics</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/events">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admissions">Admissions</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/our-team">Our Team</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact-us">Contact Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- end - mobile view -->
+  <nav class="subpage-tint d-none d-xl-block">
     <div class="container">
       <!-- desktop view -->
       <div class="fixed-navbar">
@@ -55,17 +102,14 @@
         <a href="/contact-us" class="btn btn-outline-success navbar-link">Contact Us</a>
       </div>
       <!-- end - desktop view -->
-
-      <!-- mobile view -->
-      <!-- end - mobile view -->
     </div>
   </nav>
 
   <header class="sub-header-image">
     <figure>
-      <img src="/img/team.jpg" alt="">
+      <img src="https://res.cloudinary.com/imgursoyjean/image/upload/v1547710797/mis/mis-ourteam/staff_2018-19.jpg" alt="Group photo of Staffs 2018-19">
       <figcaption class="container">
-        <span class="sub-header-location">MIS Team - Main Office</span>
+        <span class="sub-header-location">MIS Team - Secondary Football pitch</span>
       </figcaption>
     </figure>
 
@@ -85,22 +129,23 @@
           </span>
         </span>
 
-        <span class="header__text-box">
+        <div class="header__text-box">
           <div class="header__text-box--title">
-            Vision
+            VISION
           </div>
           <span class="header__text-box--description">
-            Empower the people to improve lives with dynamic business opportunities and innovative products.
+            Insert School Vision Here
           </span>
+          <hr>
           <div class="header__text-box--title">
-            Mission
+            MISSION
           </div>
           <span class="header__text-box--description">
             To nurture a happy, safe & welcoming community where children are equipped with positive attitudes, skills
             & knowledge to enable them to enjoy their childhood & to server as a foundation for their future
             development.
           </span>
-        </span>
+        </div>
       </div>
 
       <div class="row">
@@ -109,14 +154,30 @@
             <!-- Quick Links -->
             <h4>Quick Links</h4>
             <ul>
-              <a href="#main-office"><li>&rtrif;Main Office</li></a>
-              <a href="#eyfs"><li>&rtrif;Early Years</li></a>
-              <a href="#ks1"><li>&rtrif;Key Stage 1</li></a>
-              <a href="#ks2"><li>&rtrif;Key Stage 2</li></a>
-              <a href="#ks3"><li>&rtrif;Key Stage 3</li></a>
-              <a href="#ks4"><li>&rtrif;Key Stage 4</li></a>
-              <a href="#primary-subject"><li>&rtrif;Primary Subjects</li></a>
-              <a href="#secondary-subject"><li>&rtrif;Secondary Subjects</li></a>
+              <a href="#main-office">
+                <li>&rtrif;Main Office</li>
+              </a>
+              <a href="#eyfs">
+                <li>&rtrif;Early Years</li>
+              </a>
+              <a href="#ks1">
+                <li>&rtrif;Key Stage 1</li>
+              </a>
+              <a href="#ks2">
+                <li>&rtrif;Key Stage 2</li>
+              </a>
+              <a href="#ks3">
+                <li>&rtrif;Key Stage 3</li>
+              </a>
+              <a href="#ks4">
+                <li>&rtrif;Key Stage 4</li>
+              </a>
+              <a href="#primary-subject">
+                <li>&rtrif;Primary Subjects</li>
+              </a>
+              <a href="#secondary-subject">
+                <li>&rtrif;Secondary Subjects</li>
+              </a>
             </ul>
 
             <!-- End of Quick Links -->
@@ -925,6 +986,7 @@
     $('#header-carousel').carousel({
       interval: 5000
     });
+    $('.alert').alert();
   </script>
 </body>
 
